lang2/macro/tests/ui/fail/08-constructor-self-ref.stderr
error: #[ink(constructor)] functions must have a `&mut self` receiver
  --> $DIR/08-constructor-self-ref.rs:12:29
   |
12 |         fn invalid_self_ref(&self) {}
   |                             ^^^^^
